--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-vector-icons": "^10.0.3",
     "react-redux": "^9.1.0",
     "redux-persist": "^6.0.0",
+    "sharp": "^0.33.2",
     "yup": "^1.3.3"
   },
   "devDependencies": {
@@ -54,6 +55,7 @@
     "@react-native/eslint-config": "0.73.2",
     "@react-native/metro-config": "0.73.3",
     "@react-native/typescript-config": "0.73.1",
+    "@types/jest": "^29.5.11",
     "@types/react": "^18.2.6",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
