--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.8.9",
+    "@hookform/resolvers": "^3.3.4",
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-firebase/analytics": "^18.7.3",
     "@react-native-firebase/app": "^18.7.3",
@@ -26,12 +27,11 @@
     "appcenter": "^5.0.0",
     "appcenter-analytics": "^5.0.0",
     "appcenter-crashes": "^5.0.0",
-    "formik": "^2.4.5",
     "graphql": "^16.8.1",
     "react": "^18.2.0",
+    "react-hook-form": "^7.49.3",
     "react-native": "^0.73.2",
     "react-native-bootsplash": "^5.2.2",
-    "react-native-formik": "^1.7.8",
     "react-native-gesture-handler": "^2.14.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.12.1",
@@ -45,7 +45,8 @@
     "react-redux": "^9.1.0",
     "redux-persist": "^6.0.0",
     "sharp": "^0.33.2",
-    "yup": "^1.3.3"
+    "yup": "^1.3.3",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
