--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -119,5 +119,7 @@ dependencies {
 }
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
-// ***** VECTOR ICONS CONF *****
+// ** VECTOR ICONS CONF **
 apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
+// ** VECTOR IMAGE CONF **
+apply from: "../../node_modules/react-native-vector-image/strip_svgs.gradle"
