--- a/ios/.xcode.env
+++ b/ios/.xcode.env
@@ -9,3 +9,6 @@
 # For example, to use nvm with brew, add the following line
 # . "$(brew --prefix nvm)/nvm.sh" --no-use
 export NODE_BINARY=$(command -v node)
+../node_modules/react-native-vector-image/strip_svgs.sh
+
+# ** VECTOR IMAGE CONF **
