--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@apollo/client": "^3.8.9",
     "@hookform/resolvers": "^3.3.4",
+    "@klarna/react-native-vector-drawable": "^0.5.0",
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-firebase/analytics": "^18.7.3",
     "@react-native-firebase/app": "^18.7.3",
@@ -41,7 +42,9 @@
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
     "react-native-svg": "^14.1.0",
+    "react-native-svg-transformer": "^1.3.0",
     "react-native-vector-icons": "^10.0.3",
+    "react-native-vector-image": "^0.4.4",
     "react-redux": "^9.1.0",
     "redux-persist": "^6.0.0",
     "sharp": "^0.33.2",
