--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^18.2.0",
     "react-hook-form": "^7.49.3",
     "react-native": "^0.73.2",
+    "react-native-animatable": "^1.4.0",
     "react-native-bootsplash": "^5.2.2",
     "react-native-gesture-handler": "^2.14.1",
     "react-native-linear-gradient": "^2.8.3",
