--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "appcenter": "^5.0.0",
     "appcenter-analytics": "^5.0.0",
     "appcenter-crashes": "^5.0.0",
+    "expo-localization": "^14.5.0",
     "graphql": "^16.8.1",
+    "i18n-js": "^4.3.2",
     "react": "^18.2.0",
     "react-hook-form": "^7.49.3",
     "react-native": "^0.73.2",
@@ -48,7 +50,8 @@
     "redux-persist": "^6.0.0",
     "sharp": "^0.33.2",
     "yup": "^1.3.3",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
