--- a/package.json
+++ b/package.json
@@ -43,9 +43,11 @@
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
+    "react-native-shared-element": "^0.8.9",
     "react-native-svg": "^14.1.0",
     "react-native-svg-transformer": "^1.3.0",
     "react-native-vector-icons": "^10.0.3",
+    "react-navigation-shared-element": "^3.1.3",
     "react-redux": "^9.1.0",
     "redux-persist": "^6.0.0",
     "sharp": "^0.33.2",
